   to the master bug. Thanks Brian Murray.
 * launchpad.py: Set importance of Python crash reports to "Medium" by default,
   similar to signal crashes. Thanks Brian Murray.
 * hookutils.py: Add attach_default_grub() convenience function from the grub2
   package hook so it can be used by other packages. Thanks Brian Murray.

2.1 (2012-05-18)
----------------
Improvements:
 * packaging.py, install_packages(): Add permanent_rootdir flag and if set,
   only unpack newly downloaded packages. Implement it for the apt/dpkg
   backend. Thanks Evan Dandrea.
 * apport-retrace: Add --sandbox-dir option for keeping a permanent sandbox
   (unpacked packages). This provides a considerable speedup. Thanks Evan
   Dandrea.
 * crash-digger: Add --sandbox-dir option and pass it to apport-retrace.
 * Fix the whole code to be PEP-8 compatible, and enforce this in test/run by
   running the "pep8" tool.
 * GTK UI tests: Ensure that there are no GLib/GTK warnings or criticals.
 * Support Python 3. Everything except the launchpad crashdb backend now works
   with both Python 2 and 3. An important change is that the load(),
   write(), and write_mime() methods of a ProblemReport and apport.Report
   object now require the file stream to be opened in binary mode.
 * data/apport: Ignore a crash if the executable was modified after the process
   started. This often happens if the package is upgraded and a long-running
   process is not stopped before. (LP: #984944)
 * Add test cases for apport-unpack.
 * apport-retrace: Add information about outdated packages to the
   "RetraceOutdatedPackages" field.
 * ui.py: Drop python-xdg dependency, use ConfigParser to read the .desktop
   files.

Bug fixes:
 * apport-gtk: Work around GTK crash when trying to set pixmap on an already
   destroyed parent window. (LP: #938090)
 * data/dump_acpi_tables.py: Fix crash on undefined variable with non-standard
   tables. (LP: #982267)