@@ -113,6 +113,17 @@ Crash database implementations
    - cache_dir: Path to a permanent cache directory; by default it uses a
      temporary one. (optional). This can be overridden or set by
      $APPORT_LAUNCHPAD_CACHE environment.
+   - escalation_subscription: This subscribes the given person or team to
+     a bug once it gets the 10th duplicate.
+   - escalation_tag: This adds the given tag to a bug once it gets more
+     than 10 duplicates.
+   - initial_subscriber: The Launchpad user which gets subscribed to newly
+     filed bugs (default: "apport"). It should be a bot user which the
+     crash-digger instance runs as, as this will get to see all bug
+     details immediately.
+   - triaging_team: The Launchpad user/team which gets subscribed after
+     updating a crash report bug by the retracer (default:
+     "ubuntu-crashes-universe")
 
 
  * "memory" is a simple implementation of crash database interface which keeps
