@@ -10,6 +10,10 @@ Improvements:
    similar to signal crashes. Thanks Brian Murray.
  * hookutils.py: Add attach_default_grub() convenience function from the grub2
    package hook so it can be used by other packages. Thanks Brian Murray.
+ * launchpad.py: Make Launchpad bug subscription user/team configurable: The
+   initial subscriber after filing a bug can be set with the
+   "initial_subscriber" crashdb option, and the team which gets subscribed
+   after retracing with "triaging_team". (LP: #980726)
 
 2.1 (2012-05-18)
 ----------------
